@@ -1,3 +1,5 @@
+HEAD
+	+ Remove Zentyal Remote leftovers
 3.2.20
 	+ Disconnect from Zentyal Remote
 	+ Use new Zentyal 5.0 license system for commercial editions
